--- a/configs/zynq_pynqz1_defconfig
+++ b/configs/zynq_pynqz1_defconfig
@@ -38,6 +38,7 @@ CONFIG_DFU_MMC=y
 CONFIG_DFU_RAM=y
 CONFIG_FPGA_XILINX=y
 CONFIG_MMC=y
+CONFIG_ZYNQ_SDHCI=y
 CONFIG_MMC_SDHCI=y
 CONFIG_MMC_SDHCI_ZYNQ=y
 CONFIG_SPI_FLASH=y
