--- a/configs/zynq_pynqz1_defconfig
+++ b/configs/zynq_pynqz1_defconfig
@@ -18,10 +18,10 @@ CONFIG_SPL_DM_MMC=y
 CONFIG_SYS_PROMPT="Zynq> "
 CONFIG_CMD_THOR_DOWNLOAD=y
 CONFIG_CMD_DFU=y
-CONFIG_CMD_FPGA_LOADBP=y
+# CONFIG_CMD_FPGA_LOADBP=y
 CONFIG_CMD_FPGA_LOADFS=y
 CONFIG_CMD_FPGA_LOADMK=y
-CONFIG_CMD_FPGA_LOADP=y
+# CONFIG_CMD_FPGA_LOADP=y
 CONFIG_CMD_GPIO=y
 CONFIG_CMD_I2C=y
 CONFIG_CMD_MMC=y
@@ -36,7 +36,7 @@ CONFIG_NET_RANDOM_ETHADDR=y
 CONFIG_SPL_DM_SEQ_ALIAS=y
 CONFIG_DFU_MMC=y
 CONFIG_DFU_RAM=y
-CONFIG_FPGA_XILINX=y
+# CONFIG_FPGA_XILINX=y
 CONFIG_MMC=y
 CONFIG_ZYNQ_SDHCI=y
 CONFIG_MMC_SDHCI=y
