--- a/configs/zynq_pynqz1_defconfig
+++ b/configs/zynq_pynqz1_defconfig
@@ -12,9 +12,9 @@ CONFIG_FIT_SIGNATURE=y
 CONFIG_BOOTCOMMAND="run $modeboot || run distro_bootcmd"
 # CONFIG_DISPLAY_CPUINFO is not set
 CONFIG_SPL=y
-CONFIG_SPL_STACK_R=y
+# CONFIG_SPL_STACK_R=y
 CONFIG_SPL_OS_BOOT=y
-CONFIG_SPL_DM_MMC=y
+# CONFIG_SPL_DM_MMC=y
 CONFIG_SYS_PROMPT="Zynq> "
 CONFIG_CMD_THOR_DOWNLOAD=y
 CONFIG_CMD_DFU=y
@@ -40,7 +40,7 @@ CONFIG_DFU_RAM=y
 CONFIG_MMC=y
 CONFIG_ZYNQ_SDHCI=y
 CONFIG_MMC_SDHCI=y
-CONFIG_MMC_SDHCI_ZYNQ=y
+# CONFIG_MMC_SDHCI_ZYNQ=y
 CONFIG_SPI_FLASH=y
 CONFIG_SPI_FLASH_BAR=y
 CONFIG_SPI_FLASH_SPANSION=y
